added safe args between TextFragment.kt and Encrypt.kt

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,5 +28,9 @@
         android:id="@+id/encrypt"
         android:name="ks.encrypttext.fragments.Encrypt"
         android:label="fragment_encrypt"
-        tools:layout="@layout/fragment_encrypt" />
+        tools:layout="@layout/fragment_encrypt" >
+        <argument
+            android:name="textForEncrypt"
+            app:argType="string" />
+    </fragment>
 </navigation>
