--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,8 @@
         tools:layout="@layout/fragment_text" >
         <action
             android:id="@+id/action_textFragment_to_encrypt"
-            app:destination="@id/encrypt" />
+            app:destination="@id/encrypt"
+            app:popUpTo="@id/welcomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/encrypt"
